Bump up bluetape4k (0.0.2), kotlin (2.1.0)
Signed-off-by: Debop <sunghyouk.bae@gmail.com>